# sage

./: .env.example  .envrc  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  flake.nix  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/sage-core/: Cargo.toml
crates/sage-core/migrations/00000000000000_create_messages/: up.sql
crates/sage-core/migrations/2026-01-25-031714-0000_create_preferences/: up.sql
crates/sage-core/migrations/2026-01-26-225415-0000_create_scheduled_tasks/: up.sql
crates/sage-core/migrations/2026-01-27-203125-0000_create_chat_contexts/: down.sql  up.sql
crates/sage-core/migrations/2026-02-05-000000_add_attachment_text/: down.sql  up.sql
crates/sage-core/migrations/2026-02-22-010953-0000_add_reply_context_to_chat_contexts/: down.sql  up.sql
crates/sage-core/src/: agent_manager.rs  config.rs  lib.rs  main.rs  marmot.rs  messenger.rs  sage_agent.rs  scheduler.rs  scheduler_tools.rs  schema.rs  shell_tool.rs  signal.rs  storage.rs  tools.rs  vision.rs
crates/sage-tools/: Cargo.toml
crates/sage-tools/src/: brave.rs  filesystem.rs  lib.rs  web_search.rs
docs/: GEPA_OPTIMIZATION.md  LETTA_ARCHITECTURE_REVERSE_ENGINEERING.md  REVERSE_ENGINEERING_SCRATCHPAD.md  SAGE_V2_DESIGN.md  architecture.md  brainstorm.md  decisions.md  roadmap.md
docs/prompts/: bad-response-1.md  bad-system-1.md  bad-user-1.md  good-response-1.md  good-system-1.md  good-user-1.md
examples/gepa/: trainset.json  valset.json
optimized_instructions/: README.md  latest.txt
(+28 files in other folders)
